# meta-rl

./: .gitignore  Dockerfile  README.md  baseline.py  client.py  inference.py  models.py  openenv.yaml  prd.md  pyproject.toml  requirements.txt  test_hf.py
checkpoints/: channel_optimizer.pt
deploy/: sample-inference.py
rl/: env_adapter.py  infer.py  policy.py  train.py
server/: Dockerfile  app.py  environment.py  grader.py  simulation.py  tasks.py
ui/: dashboard.py
